--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,4 @@
 logo: /images/isomer-logo.svg
 links:
-  - title: Contact Us
-    url: /contact-us/
-  - title: Example Page
-    url: /example-page/
+  - title: About RV 关于立化
+    collection: about-rv
