--- a/_about-rv/collection.yml
+++ b/_about-rv/collection.yml
@@ -2,4 +2,5 @@ collections:
   about-rv:
     output: true
     order:
+      - Vision, Mission, Motto.md
       - A World Class Educational Institution.md
