--- a/_about-rv/collection.yml
+++ b/_about-rv/collection.yml
@@ -2,5 +2,6 @@ collections:
   about-rv:
     output: true
     order:
+      - School Values and Spirit.md
       - A World Class Educational Institution.md
       - Vision, Mission, Motto.md
