--- a/_about-rv/collection.yml
+++ b/_about-rv/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-rv:
     output: true
     order:
+      - Contact Info.md
       - A World Class Educational Institution.md
       - Vision, Mission, Motto.md
       - School Values and Spirit.md
