--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,3 +2,5 @@ logo: /images/isomer-logo.svg
 links:
   - title: About RV 关于立化
     collection: about-rv
+  - title: RVIP 立化综合课程
+    collection: rvip
