--- a/_rvip/collection.yml
+++ b/_rvip/collection.yml
@@ -2,5 +2,6 @@ collections:
   rvip:
     output: true
     order:
+      - RVIP Flagship Programmes/.keep
       - School Prospectus.md
       - Integrated Programme.md
