--- a/_rvip/collection.yml
+++ b/_rvip/collection.yml
@@ -2,6 +2,7 @@ collections:
   rvip:
     output: true
     order:
+      - Academic Programme/Science.md
       - Academic Programme/Academic Programme.md
       - Academic Programme/.keep
       - School Prospectus.md
