--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,3 +4,5 @@ links:
     collection: about-rv
   - title: RVIP 立化综合课程
     collection: rvip
+  - title: The RV Experience 立化学习旅程
+    url: /permalink
