--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,4 +5,4 @@ links:
   - title: RVIP 立化综合课程
     collection: rvip
   - title: The RV Experience 立化学习旅程
-    url: /permalink
+    url: /the-rv-experience/rv-experience/
