--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,3 +6,5 @@ links:
     collection: rvip
   - title: The RV Experience 立化学习旅程
     url: /the-rv-experience/rv-experience/
+  - title: Achievements 荣誉榜
+    collection: achievements
