--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,3 +8,6 @@ links:
     url: /the-rv-experience/rv-experience/
   - title: Achievements 荣誉榜
     collection: achievements
+  - title: Our Stories 立化故事
+    url: /permalink
+    sublinks: []
