--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,5 +9,5 @@ links:
   - title: Achievements 荣誉榜
     collection: achievements
   - title: Our Stories 立化故事
-    url: /permalink
+    url: /about-rv/wc-edu-institution/
     sublinks: []
