--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,4 +10,6 @@ links:
     collection: achievements
   - title: Our Stories 立化故事
     url: /about-rv/wc-edu-institution/
-    sublinks: []
+    sublinks:
+      - title: RV60
+        url: /permalink
