--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,4 +12,4 @@ links:
     url: /about-rv/wc-edu-institution/
     sublinks:
       - title: RV60
-        url: /permalink
+        url: /ours-stories/rv60/
