--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,4 +14,4 @@ links:
       - title: RV60
         url: /ours-stories/rv60/
       - title: 立化情 * 青春岸
-        url: /permalink
+        url: /ours-stories/ourstories-2ndnavi/
