--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,3 +15,5 @@ links:
         url: /ours-stories/rv60/
       - title: 立化情 * 青春岸
         url: /ours-stories/ourstories-2ndnavi/
+      - title: RV Times
+        url: /ours-stories/rv-times
