--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,3 +17,5 @@ links:
         url: /ours-stories/ourstories-2ndnavi/
       - title: RV Times
         url: /ours-stories/rv-times
+      - title: RV Montage
+        url: /permalink
