--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,4 +18,4 @@ links:
       - title: RV Times
         url: /ours-stories/rv-times
       - title: RV Montage
-        url: /permalink
+        url: /ours-stories/rv-montage/
