--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,3 +19,5 @@ links:
         url: /ours-stories/rv-times
       - title: RV Montage
         url: /ours-stories/rv-montage/
+      - title: WEStories
+        url: /ours-stories/westories/
