--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,3 +21,5 @@ links:
         url: /ours-stories/rv-montage/
       - title: WEStories
         url: /ours-stories/westories/
+  - title: DSA 直接招生计划
+    collection: dsa
