--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,10 +1,9 @@
 contact_us: /contact-us/
 show_reach: true
-feedback: 
-faq: /faq/
+faq: https://staging.d27a28nqo6ie0z.amplifyapp.com/faq/
 social_media:
-    facebook: https://www.facebook.com/YourFBPage
-    twitter: https://www.twitter.com/YourTwitter
-    youtube: https://www.youtube.com/YourYoutube
-    instagram: https://www.instagram.com/your.insta/
-    linkedin: https://www.linkedin.com/company/YourAgency
+  facebook: https://www.facebook.com/YourFBPage
+  twitter: https://www.twitter.com/YourTwitter
+  youtube: https://www.youtube.com/YourYoutube
+  instagram: https://www.instagram.com/your.insta/
+  linkedin: https://www.linkedin.com/company/YourAgency
