--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,6 +1,6 @@
 contact_us: /contact-us/
 show_reach: true
-faq: https://staging.d27a28nqo6ie0z.amplifyapp.com/faq/
+faq: https://staging.d27a28nqo6ie0z.amplifyapp.com/information/faqs/
 social_media:
   facebook: https://www.facebook.com/YourFBPage
   twitter: https://www.twitter.com/YourTwitter
