--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,3 +23,5 @@ links:
         url: /ours-stories/westories/
   - title: DSA 直接招生计划
     collection: dsa
+  - title: FAQs 答案问
+    url: https://staging.d27a28nqo6ie0z.amplifyapp.com/information/faqs/
