--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: Title
-url: https://rivervalleyhigh.moe.edu.sg
-favicon: /images/favicon-isomer.ico
+title: River Valley High E-openhouse
+url: https://rivervalleyhigheopenhouse.moe.edu.sg
+favicon: /images/photo_2023-01-20_16-49-31.jpg
 colors:
-  primary-color: "#6031b6"
+  primary-color: "#4372d6"
   secondary-color: "#4372d6"
   media-colors:
     - title: media-color-one
-      color: "#49759a"
+      color: "#4372d6"
     - title: media-color-two
       color: "#744d9f"
     - title: media-color-three
@@ -51,7 +51,7 @@ plugins:
   - jekyll-remote-theme
 staging: https://staging.d2vato9q3qioue.amplifyapp.com
 prod: https://master.d2vato9q3qioue.amplifyapp.com
-shareicon: /images/isomer-logo.svg
+shareicon: /images/photo_2023-01-20_16-49-31.jpg
 is_government: false
 facebook-pixel: ""
 google_analytics: ""
