--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/isomer-logo.svg
+logo: /images/photo_2023-01-20_16-49-31.jpg
 links:
   - title: About RV 关于立化
     collection: about-rv
