--- a/_ours-stories/collection.yml
+++ b/_ours-stories/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - RV60.md
-      - 立化情.md
+      - 立化情  青春岸.md
       - RV Times.md
       - RV Montage.md
       - WEStories.md
