--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,4 @@
-contact_us: /contact-us/
+contact_us: /contact-us/https://staging.d27a28nqo6ie0z.amplifyapp.com/contact-us/
 show_reach: true
 faq: https://staging.d27a28nqo6ie0z.amplifyapp.com/information/faqs/
 social_media:
