--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -2,8 +2,6 @@ contact_us: /contact-us/https://staging.d27a28nqo6ie0z.amplifyapp.com/contact-us
 show_reach: true
 faq: https://staging.d27a28nqo6ie0z.amplifyapp.com/information/faqs/
 social_media:
-  facebook: https://www.facebook.com/YourFBPage
-  twitter: https://www.twitter.com/YourTwitter
-  youtube: https://www.youtube.com/YourYoutube
-  instagram: https://www.instagram.com/your.insta/
-  linkedin: https://www.linkedin.com/company/YourAgency
+  facebook: https://www.facebook.com/River-Valley-High-School-Singapore-Official-352563478111277/
+  youtube: https://www.youtube.com/channel/UC3R6nzwepYfL_CRdPGWGwvA/
+  instagram: https://www.instagram.com/rivervalleysg/
