--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@ title: River Valley High E-openhouse
 url: https://rivervalleyhigheopenhouse.moe.edu.sg
 favicon: /images/photo_2023-01-20_16-49-31.jpg
 colors:
-  primary-color: "#4372d6"
-  secondary-color: "#4372d6"
+  primary-color: "#01209f"
+  secondary-color: "#01209f"
   media-colors:
     - title: media-color-one
-      color: "#4372d6"
+      color: "#01209f"
     - title: media-color-two
-      color: "#744d9f"
+      color: "#01209f"
     - title: media-color-three
       color: "#00838f"
     - title: media-color-four
