--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,6 +1,6 @@
 contact_us: /contact-us/https://staging.d27a28nqo6ie0z.amplifyapp.com/contact-us/
 show_reach: true
-faq: https://staging.d27a28nqo6ie0z.amplifyapp.com/information/faqs/
+faq: //staging.d27a28nqo6ie0z.amplifyapp.com/information/faqs/
 social_media:
   facebook: https://www.facebook.com/River-Valley-High-School-Singapore-Official-352563478111277/
   youtube: https://www.youtube.com/channel/UC3R6nzwepYfL_CRdPGWGwvA/
